web/static/css/app.css
* {
  text-rendering:optimizeLegibility;
}

*:focus {
  outline: none;
}

body, html {
  margin:0;
  padding:0;
  overflow-x:hidden;
}

section {
  height:100vh;
  width:100vw;
}

/*
* MENU
*/
#menu {
  background:-webkit-linear-gradient(left, rgb(160,30,28), rgba(97,4,0, 0.8));
  width:30vw;
  position:fixed;
  z-index:665;
}

.menu-hidden {
  display:none;
}

.menu-visible {
  display:inherit;
}

.menu-item {
  transition:color 0.5s ease;
  font-family:Avenir,sans-serif;
  color:white;
  margin:0 5vw 0 5vw;
  text-transform:lowercase;
}

.menu-item:hover {
  color:#ff7878;
}

#first-menu-item {
  font-weight:100;
  padding:20vh 0 5vh 0;
}

#menu-contact {
  margin:10vh 5vw 0 5vw;
}

#menu-info {
  font-family:Avenir,sans-serif;
  color:white;
  margin:15vh 5vw 0 5vw;
}

#menu-info > p {
  margin:0.5vh 0 0.5vh 0;
}

#menu-trigger {
  transition:background-image 0.5s ease;
  position:fixed;
  z-index:666;
  left:5vw;
  top:8vh;
  color: white;
  text-transform: lowercase;
  font-family: Avenir,sans-serif;
  font-size: 1.2em;
  letter-spacing: 0.1em;
  border:none;

  width:3vw;
  height:5vh;
  min-width:40px;
  min-height:30px;
}

.menu-open {
  background-image:url("/images/menu-icon.png");
  background-color:transparent;
  background-size:cover;
}

.menu-close {
  background-image:url("/images/menu-icon-close.png");
  background-color:transparent;
  background-size:cover;
}

#be-quoted {
  position:fixed;
  z-index:666;
  right:5vw;
  top:8vh;

  background-color:rgb(230,48,46);
  color: white;
  text-transform: lowercase;
  font-family: Avenir,sans-serif;
  font-size: 1.2em;
  letter-spacing: 0.1em;
  border-color: white;
  border-style: solid;
  border-width: 0.18em;
  padding: 0 1vw;

  box-shadow:0 1px 7px #3c1010;
}

/*
* SPLASH
*/

#splash-section {
  background:-webkit-linear-gradient(rgb(230,48,46), rgb(166,48,44));
  box-sizing:border-box;

  display:flex;
  align-content:center;
  align-items:center;
}

#splash {
  height:12vh;
  width:55vw;
  padding:40vh 20vw 40vh 20vw;
  margin:0 auto;
  text-align:center;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  justify-content:center;
  align-items:center;

  border:0.2em solid white;
}

#steed {
  color:#fff;
  font-family:Avenir,sans-serif;
  font-weight:400;
  font-size:5em;
}

#welcome {
  color:#fff;
  font-family:Avenir,sans-serif;
  font-weight:100;
  font-size:0.9em;
  letter-spacing:0.02em;
  margin:-4em 0 0 0;
  max-width:30em;
}

/*
* CONSULTANCY
*/

#consultancy-section {
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  justify-content:center;
  align-items:center;

  overflow:hidden;
  height:100vh;
  background-image:url("/images/consultancy-cover.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:relative;
}

#consultancy-video {
  width:100vw;
  zoom:150%;
}

#consultancy-video-color {
  background-color:rgba(47,9,9, 0.5);
  position:absolute;
  top:0;
  right:0;
  bottom:0;
  left:0;
}

#consultancy {
  transition:color 0.5s ease;
  position:absolute;
  bottom:0.2em;
  left:1em;
  color:white;
  font-family:Avenir,sans-serif;
  text-transform:uppercase;
  letter-spacing:0.1em;
  font-size:4em;
}

#consultancy:hover {
  color:#ff7878;
}

/*
* SOLUTIONS
*/

#solutions-section {
  background-color:#c4c4c4;
  background-image:url("/images/solutions-asset.png");
  background-repeat:no-repeat;
  background-size:cover;

  box-sizing:border-box;
  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  justify-content:center;
  align-items:center;

  overflow:hidden;
  height:100vh;
  position:relative;
}

#solutions-asset {
  position:absolute;
  top:0;
  right:0;
  bottom:0;
  left:0;
}

#solutions-iphone {
  background-image:url("/images/solutions-iphone.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:absolute;

  width:80vw;
  height:80vh;
  bottom:11em;
  right:0;
}

#solutions {
  position:absolute;
  bottom:10em;
  left:3em;
  color:rgb(230,48,46);
  font-family:Avenir,sans-serif;
  text-transform:lowercase;
  letter-spacing:0.1em;
  font-size:1.5em;
}

#solutions-feature {
  transition:color 0.5s ease;
  position:absolute;
  bottom:0.2em;
  left:1em;
  color:#fff;
  font-family:Avenir,sans-serif;
  text-transform:uppercase;
  letter-spacing:0.1em;
  font-size:4em;
  max-width:15em;
}

#solutions-feature:hover {
  color:#ff7878;
}

/*
* EVENTS
*/

#events-section {
  background-color:#c4c4c4;
  background-image:url("/images/events-cover.jpg");
  background-repeat:no-repeat;
  background-size:cover;

  box-sizing:border-box;
  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  justify-content:center;
  align-items:center;

  overflow:hidden;
  height:100vh;
  position:relative;
}

#events-triangles {
  background-image:url("/images/events-triangles.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:absolute;

  width:80vw;
  height:100vh;
  bottom:0;
  right:0;
}

#events {
  position:absolute;
  bottom:10em;
  left:3em;
  color:rgb(230,48,46);
  font-family:Avenir,sans-serif;
  text-transform:lowercase;
  letter-spacing:0.1em;
  font-size:1.5em;
}

#events-feature {
  transition:color 0.5s ease;
  position:absolute;
  bottom:0.2em;
  left:1em;
  color:#fff;
  font-family:Avenir,sans-serif;
  text-transform:uppercase;
  letter-spacing:0.1em;
  font-size:4em;
  max-width:15em;
}

#events-feature:hover {
  color:#ff7878;
}

/*
* FOOTER
*/

footer {
  background:-webkit-linear-gradient(right, rgb(230,48,46), rgb(166,48,44));
  box-sizing:border-box;

  display:flex;
  align-content:center;
  align-items:center;
  -webkit-flex-direction:row;
  flex-direction:row;
}

.footer-section {
  margin:5vh 10vw 5vh 10vw;
  width:20vw;
  font-family:Avenir, sans-serif;
  font-size:0.8em;
}
/* ... */

